--- a/amap/public/index.html
+++ b/amap/public/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="main">
-      <!-- C'est ici qui notre app React va se charger -->
+      <!-- C'est ici qui notre app React va se charger EMMET-->
     </div>
   </body>
 </html>
